# deepeeRT

./: CMakeLists.txt
dp/: Backend.cpp  Backend.h  CMakeLists.txt  Context.cpp  Context.h  DeviceAbstraction.h  DeviceArray.h  DeviceCuda.cu  Group.cpp  Group.cu  Group.h  Instances.cpp  Instances.h  Ray.h  Triangles.cpp  Triangles.cu  Triangles.h  World.cpp  World.cu  World.h  common.h  deepeeRT.cpp  deepeeRTConfig.cmake.in
dp/cuBQL/: AutoUploadArray.h  CMakeLists.txt  CuBQLBackend.cpp  CuBQLBackend.cu  CuBQLBackend.h  Group.cu  InstanceGroup.cu  InstanceGroup.h  InstancesDP.h  Triangles.cu  Triangles.h  TrianglesDP.cpp  TrianglesDP.h  cudaBuild.cu  cudaTrace.cu  dpc_cuda.h  dpc_omp.h  ompTrace.cpp  trace.h  upload_ignore.cpp
dp/dpc/: CMakeLists.txt
dp/dpc/cuda/: CMakeLists.txt  dpc.cu
dp/dpc/cuda/dpc/: dpc.h
dp/dpc/omp/: CMakeLists.txt
dp/dpc/omp/dpc/: dpc.h
include/deepee/: deepee.h
include/deepeeRT/: deepeeRT.in.h
miniapp/: CMakeLists.txt  Camera.cu  Camera.h  DGEF.cpp  DGEF.h  Mesh.cpp  Mesh.h  bench.cpp  instanceMiniApp.cu  miniapp.cpp  miniapp.cu  ompShade.cpp  vtkToDGEF.cpp
